Chat z-index bugs

--- a/http/css/style.css
+++ b/http/css/style.css
@@ -960,13 +960,13 @@ a button {
     position:fixed;
     bottom:0;
     right:0;
+    z-index: 10;
 }
 
 #chatMinimised {
     position: fixed;
     bottom: 0;
     left: 0;
-    z-index: 1100;
     color: white;
     background-color: #396aa3;
     padding: 5px;
@@ -975,7 +975,6 @@ a button {
 #chatMinimised ul, #chatMinimised li {
     color: white;
     background-color: #4895DD;
-    z-index: 1100;
 }
 
 #chatMinimised li {
@@ -991,7 +990,6 @@ a button {
     border: 1px solid grey;
     height: 300px;
     width: 300px;
-    z-index: 10;
     bottom: 0;
 }
 
